Update meta description in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/images/icons/resume.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="description" content="Illia Yefymov - Full Stack Web Developer specializing in Django, Vue.js, and AWS." />
         <title>Illia Yefymov</title>
 
         <!-- Fonts -->
